--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -8,30 +8,37 @@
     <link rel="stylesheet" href="css/style.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/stanzaio.bundle.js"></script>
+    <script src="js/xmpp-webdemo-stanza.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
-    <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-            XMMP Chat
-        </a>
-    </div>
-    <div class="collapse navbar-collapse">
-        <form action="" class="navbar-form navbar-left loginbar">
-            <div class="input-group">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-                <input type="text" class="form-control name" placeholder="Username"/>
-            </div>
-            <div class="input-group">
-                <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-                <input type="password" class="form-control password" placeholder="Password"/>
-            </div>
-            <input class="btn btn-default btn-login" type="submit" value="Login"/>
-        </form>
-        <p class="navbar-text navbar-right ws-url"><strong>Prosody on </strong> ws://localhost:5280/xmpp-websocket</p>
-    </div>
-
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+                XMMP Chat
+            </a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <form class="navbar-form navbar-left login">
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                    <input type="text" class="form-control name" placeholder="Username"/>
+                </div>
+                <div class="input-group">
+                    <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+                    <input type="password" class="form-control password" placeholder="Password"/>
+                </div>
+                <div class="btn btn-default btn-login">Login</div>
+            </form>
+            <p class="navbar-text connected">
+                <span class="label label-success">Connected</span>
+            </p>
+            <button type="button" class="btn btn-default navbar-btn btn-logout connected">Logout</button>
+            <p class="navbar-text navbar-right ws-url"><strong>Prosody on </strong> ws://localhost:5280/xmpp-websocket
+            </p>
+        </div>
     </div>
 </nav>
 <div class="container-fluid">
@@ -39,7 +46,10 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
                 aria-hidden="true">&times;</span>
         </button>
-        <strong>Logins:</strong> <span class="label label-primary">stanzaio:stanza</span>
+        <strong>Logins:</strong>
+        <span class="label label-primary" onclick="fillLogin('stanzaio@localhost','stanza');">
+            stanzaio@localhost:stanza
+        </span>
     </div>
 
     <div class="row">
@@ -50,10 +60,10 @@
                     Messages will go here...
                 </div>
                 <div class="panel-footer">
-                        <div class="input-group">
-                            <textarea class="form-control custom-control message" rows="2"></textarea>
-                            <span class="input-group-addon btn btn-default btn-send">Send</span>
-                        </div>
+                    <div class="input-group">
+                        <input class="form-control custom-control text" placeholder="Your Message"/>
+                        <span class="input-group-addon btn btn-default btn-send">Send</span>
+                    </div>
                 </div>
             </div>
         </div>
