Finished stanza chat ability (xmppftw user is broken though (login fails somehow)) but the chat between stanzaio and strophe js users works fine

--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -59,26 +59,15 @@
     </div>
 
     <div class="row">
-        <div class="chat-window col-md-8">
-            <div class="panel panel-default">
-                <div class="panel-heading">Chat</div>
-                <div class="panel-body chat">
-                    <ul class="chat-messages"></ul>
-                </div>
-                <div class="panel-footer">
-                    <div class="input-group">
-                        <input class="form-control custom-control message-text text" placeholder="Your Message"/>
-                        <span class="input-group-addon btn btn-default btn-send">Send</span>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="friends col-md-4">
             <div class="panel panel-default">
                 <div class="panel-heading">Friendlist</div>
                 <ul class="list-group friend-list">
                 </ul>
             </div>
+        </div>
+        <div class="chat-windows col-md-8">
+
         </div>
     </div>
 </div>
