--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -11,6 +11,7 @@
     <script src="js/main.js"></script>
     <script src="js/stanzaio.bundle.js"></script>
     <script src="js/xmpp-webdemo-stanza.js"></script>
+    <script src="js/xmpp-ftw.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
