--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -9,9 +9,12 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/strophe.js"></script>
+    <script src="js/strophe.mixins.js"></script>
+    <script src="js/strophe.roster.js"></script>
     <script src="js/stanzaio.bundle.js"></script>
-    <script src="js/xmpp-webdemo-stanza.js"></script>
-    <script src="js/xmpp-ftw.js"></script>
+    <script src="js/webdemo-stanza.js"></script>
+    <script src="js/webdemo-strophe.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-static-top">
