fixed chat windows messages on logout and added chatstates for strophe

--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/vendor/jquery.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/strophe.js"></script>
-    <script src="js/strophe.mixins.js"></script>
-    <script src="js/strophe.roster.js"></script>
-    <script src="js/stanzaio.bundle.js"></script>
+    <script src="js/vendor/strophe.js"></script>
+    <script src="js/vendor/strophe.mixins.js"></script>
+    <script src="js/vendor/strophe.roster.js"></script>
+    <script src="js/vendor/stanzaio.bundle.js"></script>
     <script src="js/webdemo-stanza.js"></script>
     <script src="js/webdemo-strophe.js"></script>
 </head>
