added documentation to all self created files

--- a/chatapp/index.html
+++ b/chatapp/index.html
@@ -17,6 +17,7 @@
     <script src="js/webdemo-strophe.js"></script>
 </head>
 <body>
+<!-- Navbar with Login -->
 <nav class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -36,6 +37,7 @@
                 </div>
                 <div class="btn btn-default btn-login">Login</div>
             </form>
+            <!-- Connected Label and Logout Button -->
             <p class="navbar-text connected">
                 <span class="label label-success">Connected</span>
             </p>
@@ -45,6 +47,7 @@
         </div>
     </div>
 </nav>
+<!-- Fast Login Labels -->
 <div class="container-fluid">
     <div class="alert alert-info alert-dismissible col-md-12">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
@@ -61,7 +64,7 @@
             strophejs@localhost:strophejs
         </span>
     </div>
-
+    <!-- Panel where Friends from Roster are shown -->
     <div class="row">
         <div class="friends col-md-4">
             <div class="panel panel-default">
@@ -70,6 +73,7 @@
                 </ul>
             </div>
         </div>
+        <!-- Container for all Chat Windows -->
         <div class="chat-windows col-md-8">
 
         </div>
